# craftos-pico2

./: .gitmodules  CMakeLists.txt
src/: FreeRTOSConfig.h  common.hpp  event.cpp  event.hpp  machine.cpp  main.cpp  tusb_config.h  umm_malloc_cfgport.h
src/apis/: fs.c  fs_handle.c  fs_handle.h  os.cpp  peripheral.c  redstone.c  term.cpp
src/drivers/: hid.cpp  hid.hpp  screen.cpp  screen.hpp
src/modules/: mmfs.c  mmfs.h  redstone.c  redstone.h  terminal.cpp  terminal.hpp
